turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:0: error: not found: type color
class LangtonsAnt extends SimpleBuggle {def setCouleurSol(couleur:color) {setCouleurBrosse(couleur);baisseBrosse();leveBrosse()}
                                                                  ^