turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(couleur:color) {setCouleurBrosse(couleur);baisseBrosse();leveBrosse()}

def step() {
}